ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: green-scope-ns
  labels:
    fleet.gke.io/fleet-scope: green
