network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-green-scope
  annotations:
    configmanagement.gke.io/namespace-selector: green-scope-selector
spec:
  podSelector:
    matchLabels:
  ingress:
  - from:
    - namespaceSelector:
        matchExpressions:
        - key: 'eng.tree.hnc.x-k8s.io/depth'
          operator: Exists
